2008-06-18 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/mb/hd-comp-mgr.c:
	* src/mb/hd-comp-mgr.h:
	* src/mb/hd-desktop.c:
	Implemented specialized HdDesktop::stack() method to handle applet
	visibility.

2008-06-16 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-theme.c:
	(construct_buttons):
	Removed some testing code.

2008-06-16 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-switcher-group.c:
	(hd_switcher_group_hide_all):
	Added explicit call to clutter_actor_show() when reparenting
	client actors back to original parent.

2008-06-16 Tomas Frydrych  <tf@o-hand.com>

	* src/home/home.c:
	(hd_home_remove_view):
	(hd_home_do_layout_contents):
	Ensure correct position of Home in layout mode when last view in
	the list is removed.

2008-06-13 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	Fixed layout view when a view is removed.

2008-06-13 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/Makefile.am:
	* src/mb/hd-dialog.c:
	* src/mb/hd-dialog.h:
	* src/mb/hd-wm.c:
	Custom MBWMClientDialog subclass to handle hildon peculiarities.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/home/Makefile.am:
	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/home/hd-switcher.c:
	* src/home/hd-edit-menu.h:
	* src/home/hd-edit-menu.c:
	* src/mb/hd-comp-mgr.c:
	* src/mb/hd-comp-mgr.h:
	Home edit menu.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-app.c:
	(hd_app_close_followers):
	Hooked into  mb_wm_client_deliver_delete() mechanism.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/main.c:
	* src/mb/Makefile.am:
	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h:
	* src/mb/hd-wm.c:
	* src/mb/hd-wm.h:
	Custom HdAppMenu subclass of MBWMClientDialog to handle Hildon
	application menu windows.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/Makefile.am:
	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h:
	* src/mb/hd-wm.c:
	* src/mb/hd-note.h:
	* src/mb/hd-note.c:
	Custom HdNote subclass of MBWMClientNote to handle Hildon